[gd_scene load_steps=132 format=2]

[ext_resource path="res://SpaceFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://EnergyIcon.png" type="Texture" id=2]
[ext_resource path="res://robot icon blue.png" type="Texture" id=3]
[ext_resource path="res://creditsIcon.png" type="Texture" id=4]
[ext_resource path="res://SpaceStationMenu.gd" type="Script" id=5]
[ext_resource path="res://attackIcon-edited.png" type="Texture" id=6]
[ext_resource path="res://defenseIcon-edited.png" type="Texture" id=7]
[ext_resource path="res://EdgeOfTheGalaxyItalic-ZVJB3.otf" type="DynamicFontData" id=8]
[ext_resource path="res://waiting_animation/0.png" type="Texture" id=9]
[ext_resource path="res://waiting_animation/2.png" type="Texture" id=10]
[ext_resource path="res://waiting_animation/3.png" type="Texture" id=11]
[ext_resource path="res://waiting_animation/17.png" type="Texture" id=12]
[ext_resource path="res://waiting_animation/18.png" type="Texture" id=13]
[ext_resource path="res://waiting_animation/19.png" type="Texture" id=14]
[ext_resource path="res://waiting_animation/20.png" type="Texture" id=15]
[ext_resource path="res://waiting_animation/21.png" type="Texture" id=16]
[ext_resource path="res://waiting_animation/22.png" type="Texture" id=17]
[ext_resource path="res://waiting_animation/23.png" type="Texture" id=18]
[ext_resource path="res://waiting_animation/24.png" type="Texture" id=19]
[ext_resource path="res://waiting_animation/25.png" type="Texture" id=20]
[ext_resource path="res://waiting_animation/26.png" type="Texture" id=21]
[ext_resource path="res://waiting_animation/5.png" type="Texture" id=22]
[ext_resource path="res://waiting_animation/4.png" type="Texture" id=23]
[ext_resource path="res://waiting_animation/107.png" type="Texture" id=24]
[ext_resource path="res://waiting_animation/108.png" type="Texture" id=25]
[ext_resource path="res://waiting_animation/109.png" type="Texture" id=26]
[ext_resource path="res://waiting_animation/110.png" type="Texture" id=27]
[ext_resource path="res://waiting_animation/111.png" type="Texture" id=28]
[ext_resource path="res://waiting_animation/112.png" type="Texture" id=29]
[ext_resource path="res://waiting_animation/113.png" type="Texture" id=30]
[ext_resource path="res://waiting_animation/114.png" type="Texture" id=31]
[ext_resource path="res://waiting_animation/115.png" type="Texture" id=32]
[ext_resource path="res://waiting_animation/116.png" type="Texture" id=33]
[ext_resource path="res://waiting_animation/117.png" type="Texture" id=34]
[ext_resource path="res://waiting_animation/118.png" type="Texture" id=35]
[ext_resource path="res://waiting_animation/119.png" type="Texture" id=36]
[ext_resource path="res://waiting_animation/1.png" type="Texture" id=37]
[ext_resource path="res://waiting_animation/6.png" type="Texture" id=38]
[ext_resource path="res://waiting_animation/7.png" type="Texture" id=39]
[ext_resource path="res://waiting_animation/8.png" type="Texture" id=40]
[ext_resource path="res://waiting_animation/9.png" type="Texture" id=41]
[ext_resource path="res://waiting_animation/10.png" type="Texture" id=42]
[ext_resource path="res://waiting_animation/11.png" type="Texture" id=43]
[ext_resource path="res://waiting_animation/12.png" type="Texture" id=44]
[ext_resource path="res://waiting_animation/13.png" type="Texture" id=45]
[ext_resource path="res://waiting_animation/14.png" type="Texture" id=46]
[ext_resource path="res://waiting_animation/15.png" type="Texture" id=47]
[ext_resource path="res://waiting_animation/16.png" type="Texture" id=48]
[ext_resource path="res://waiting_animation/27.png" type="Texture" id=49]
[ext_resource path="res://waiting_animation/28.png" type="Texture" id=50]
[ext_resource path="res://waiting_animation/65.png" type="Texture" id=51]
[ext_resource path="res://waiting_animation/66.png" type="Texture" id=52]
[ext_resource path="res://waiting_animation/67.png" type="Texture" id=53]
[ext_resource path="res://waiting_animation/68.png" type="Texture" id=54]
[ext_resource path="res://waiting_animation/69.png" type="Texture" id=55]
[ext_resource path="res://waiting_animation/70.png" type="Texture" id=56]
[ext_resource path="res://waiting_animation/71.png" type="Texture" id=57]
[ext_resource path="res://waiting_animation/72.png" type="Texture" id=58]
[ext_resource path="res://waiting_animation/73.png" type="Texture" id=59]
[ext_resource path="res://waiting_animation/74.png" type="Texture" id=60]
[ext_resource path="res://waiting_animation/75.png" type="Texture" id=61]
[ext_resource path="res://waiting_animation/76.png" type="Texture" id=62]
[ext_resource path="res://waiting_animation/77.png" type="Texture" id=63]
[ext_resource path="res://waiting_animation/78.png" type="Texture" id=64]
[ext_resource path="res://waiting_animation/79.png" type="Texture" id=65]
[ext_resource path="res://waiting_animation/80.png" type="Texture" id=66]
[ext_resource path="res://waiting_animation/81.png" type="Texture" id=67]
[ext_resource path="res://waiting_animation/82.png" type="Texture" id=68]
[ext_resource path="res://waiting_animation/83.png" type="Texture" id=69]
[ext_resource path="res://waiting_animation/84.png" type="Texture" id=70]
[ext_resource path="res://waiting_animation/85.png" type="Texture" id=71]
[ext_resource path="res://waiting_animation/86.png" type="Texture" id=72]
[ext_resource path="res://waiting_animation/87.png" type="Texture" id=73]
[ext_resource path="res://waiting_animation/88.png" type="Texture" id=74]
[ext_resource path="res://waiting_animation/89.png" type="Texture" id=75]
[ext_resource path="res://waiting_animation/90.png" type="Texture" id=76]
[ext_resource path="res://waiting_animation/91.png" type="Texture" id=77]
[ext_resource path="res://waiting_animation/92.png" type="Texture" id=78]
[ext_resource path="res://waiting_animation/93.png" type="Texture" id=79]
[ext_resource path="res://waiting_animation/94.png" type="Texture" id=80]
[ext_resource path="res://waiting_animation/95.png" type="Texture" id=81]
[ext_resource path="res://waiting_animation/96.png" type="Texture" id=82]
[ext_resource path="res://waiting_animation/97.png" type="Texture" id=83]
[ext_resource path="res://waiting_animation/98.png" type="Texture" id=84]
[ext_resource path="res://waiting_animation/99.png" type="Texture" id=85]
[ext_resource path="res://waiting_animation/100.png" type="Texture" id=86]
[ext_resource path="res://waiting_animation/101.png" type="Texture" id=87]
[ext_resource path="res://waiting_animation/102.png" type="Texture" id=88]
[ext_resource path="res://waiting_animation/103.png" type="Texture" id=89]
[ext_resource path="res://waiting_animation/105.png" type="Texture" id=90]
[ext_resource path="res://waiting_animation/106.png" type="Texture" id=91]
[ext_resource path="res://waiting_animation/104.png" type="Texture" id=92]
[ext_resource path="res://waiting_animation/29.png" type="Texture" id=93]
[ext_resource path="res://waiting_animation/30.png" type="Texture" id=94]
[ext_resource path="res://waiting_animation/31.png" type="Texture" id=95]
[ext_resource path="res://waiting_animation/32.png" type="Texture" id=96]
[ext_resource path="res://waiting_animation/33.png" type="Texture" id=97]
[ext_resource path="res://waiting_animation/34.png" type="Texture" id=98]
[ext_resource path="res://waiting_animation/35.png" type="Texture" id=99]
[ext_resource path="res://waiting_animation/36.png" type="Texture" id=100]
[ext_resource path="res://waiting_animation/37.png" type="Texture" id=101]
[ext_resource path="res://waiting_animation/38.png" type="Texture" id=102]
[ext_resource path="res://waiting_animation/39.png" type="Texture" id=103]
[ext_resource path="res://waiting_animation/40.png" type="Texture" id=104]
[ext_resource path="res://waiting_animation/41.png" type="Texture" id=105]
[ext_resource path="res://waiting_animation/55.png" type="Texture" id=106]
[ext_resource path="res://waiting_animation/56.png" type="Texture" id=107]
[ext_resource path="res://waiting_animation/57.png" type="Texture" id=108]
[ext_resource path="res://waiting_animation/58.png" type="Texture" id=109]
[ext_resource path="res://waiting_animation/59.png" type="Texture" id=110]
[ext_resource path="res://waiting_animation/60.png" type="Texture" id=111]
[ext_resource path="res://waiting_animation/61.png" type="Texture" id=112]
[ext_resource path="res://waiting_animation/62.png" type="Texture" id=113]
[ext_resource path="res://waiting_animation/63.png" type="Texture" id=114]
[ext_resource path="res://waiting_animation/64.png" type="Texture" id=115]
[ext_resource path="res://waiting_animation/44.png" type="Texture" id=116]
[ext_resource path="res://waiting_animation/45.png" type="Texture" id=117]
[ext_resource path="res://waiting_animation/46.png" type="Texture" id=118]
[ext_resource path="res://waiting_animation/47.png" type="Texture" id=119]
[ext_resource path="res://waiting_animation/48.png" type="Texture" id=120]
[ext_resource path="res://waiting_animation/49.png" type="Texture" id=121]
[ext_resource path="res://waiting_animation/50.png" type="Texture" id=122]
[ext_resource path="res://waiting_animation/51.png" type="Texture" id=123]
[ext_resource path="res://waiting_animation/52.png" type="Texture" id=124]
[ext_resource path="res://waiting_animation/53.png" type="Texture" id=125]
[ext_resource path="res://waiting_animation/54.png" type="Texture" id=126]
[ext_resource path="res://waiting_animation/43.png" type="Texture" id=127]
[ext_resource path="res://waiting_animation/42.png" type="Texture" id=128]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 20
outline_color = Color( 0.752941, 0.878431, 1, 1 )
extra_spacing_top = 7
extra_spacing_char = 1
font_data = ExtResource( 8 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 37 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 128 ), ExtResource( 127 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 121 ), ExtResource( 122 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 125 ), ExtResource( 126 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 92 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="SpaceStationMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
emptyPortText = "This port is empty."

[node name="Resources" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -298.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourcesLabel" type="Label" parent="Resources"]
margin_right = 298.0
margin_bottom = 37.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
text = "Available Resources"
align = 1
valign = 2
autowrap = true

[node name="ResourcesAndInfo" type="VSplitContainer" parent="Resources"]
margin_top = 41.0
margin_right = 298.0
margin_bottom = 332.0
split_offset = 20
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourcesGrid" type="GridContainer" parent="Resources/ResourcesAndInfo"]
margin_right = 298.0
margin_bottom = 201.0
columns = 3

[node name="EnergyIcon" type="TextureRect" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_right = 35.0
margin_bottom = 37.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="EnergyLabel" type="Label" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_left = 39.0
margin_right = 241.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "Energy:"

[node name="Energy" type="Label" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_left = 245.0
margin_right = 258.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="ManuIcon" type="TextureRect" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_top = 41.0
margin_right = 35.0
margin_bottom = 78.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ManuLabel" type="Label" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_left = 39.0
margin_top = 41.0
margin_right = 241.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
text = "ManuFactories:   "

[node name="ManuFactories" type="Label" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_left = 245.0
margin_top = 41.0
margin_right = 258.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="CreditsIcon" type="TextureRect" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_top = 82.0
margin_right = 35.0
margin_bottom = 119.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="CreditsLabel" type="Label" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_left = 39.0
margin_top = 82.0
margin_right = 241.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 1 )
text = "Credits:"

[node name="Credits" type="Label" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_left = 245.0
margin_top = 82.0
margin_right = 258.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="AttackIcon" type="TextureRect" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_top = 123.0
margin_right = 35.0
margin_bottom = 160.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="AttackLabel" type="Label" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_left = 39.0
margin_top = 123.0
margin_right = 241.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 1 )
text = "Attack:"

[node name="Attack" type="Label" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_left = 245.0
margin_top = 123.0
margin_right = 258.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="DefenseIcon" type="TextureRect" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_top = 164.0
margin_right = 35.0
margin_bottom = 201.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="DefenseLabel" type="Label" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_left = 39.0
margin_top = 164.0
margin_right = 241.0
margin_bottom = 201.0
custom_fonts/font = ExtResource( 1 )
text = "Defense:"

[node name="Defense" type="Label" parent="Resources/ResourcesAndInfo/ResourcesGrid"]
margin_left = 245.0
margin_top = 164.0
margin_right = 258.0
margin_bottom = 201.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="InfoGrid" type="GridContainer" parent="Resources/ResourcesAndInfo"]
margin_top = 213.0
margin_right = 298.0
margin_bottom = 291.0
columns = 2

[node name="TotalShipsLabel" type="Label" parent="Resources/ResourcesAndInfo/InfoGrid"]
margin_right = 238.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "Total Ships:                 "

[node name="TotalShips" type="Label" parent="Resources/ResourcesAndInfo/InfoGrid"]
margin_left = 242.0
margin_right = 255.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="TurnLabel" type="Label" parent="Resources/ResourcesAndInfo/InfoGrid"]
margin_top = 41.0
margin_right = 238.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
text = "Turn:"

[node name="Turn" type="Label" parent="Resources/ResourcesAndInfo/InfoGrid"]
margin_left = 242.0
margin_top = 41.0
margin_right = 255.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="Ships" type="ScrollContainer" parent="."]
anchor_right = 0.702
anchor_bottom = 1.0
margin_right = 0.151978
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipContainer" type="VBoxContainer" parent="Ships"]
margin_right = 512.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipsLabel" type="Label" parent="Ships/ShipContainer"]
margin_right = 512.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "Docked Ships"
align = 1
valign = 2

[node name="ShipsGrid" type="HSplitContainer" parent="Ships/ShipContainer"]
margin_top = 41.0
margin_right = 512.0
margin_bottom = 50.0
split_offset = 40
dragger_visibility = 1

[node name="DockingPortList" type="ItemList" parent="Ships/ShipContainer/ShipsGrid"]
margin_bottom = 9.0
custom_fonts/font = ExtResource( 1 )

[node name="ShipList" type="ItemList" parent="Ships/ShipContainer/ShipsGrid"]
margin_left = 12.0
margin_right = 512.0
margin_bottom = 9.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 1 )
auto_height = true
fixed_icon_size = Vector2( 35, 35 )

[node name="-DockingPortList" type="VBoxContainer" parent="Ships/ShipContainer/ShipsGrid"]
visible = false
margin_right = 175.0
margin_bottom = 201.0

[node name="Label1" type="Label" parent="Ships/ShipContainer/ShipsGrid/-DockingPortList"]
margin_right = 175.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "Docking Port 1:"

[node name="Label2" type="Label" parent="Ships/ShipContainer/ShipsGrid/-DockingPortList"]
margin_top = 41.0
margin_right = 175.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
text = "Docking Port 2:"

[node name="Label3" type="Label" parent="Ships/ShipContainer/ShipsGrid/-DockingPortList"]
margin_top = 82.0
margin_right = 175.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 1 )
text = "Docking Port 3:"

[node name="Label4" type="Label" parent="Ships/ShipContainer/ShipsGrid/-DockingPortList"]
margin_top = 123.0
margin_right = 175.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 1 )
text = "Docking Port 4:"

[node name="Label5" type="Label" parent="Ships/ShipContainer/ShipsGrid/-DockingPortList"]
margin_top = 164.0
margin_right = 175.0
margin_bottom = 201.0
custom_fonts/font = ExtResource( 1 )
text = "Docking Port 5:"

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -307.963
margin_top = -190.469
margin_right = -118.963
margin_bottom = -53.4687
rect_scale = Vector2( 1.60281, 1.34835 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyShips" type="Button" parent="Buttons"]
margin_right = 189.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "Purchase Ships"

[node name="GoToBridge" type="Button" parent="Buttons"]
margin_top = 47.0
margin_right = 189.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 1 )
text = "Go To Bridge"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurn" type="Button" parent="Buttons"]
margin_top = 94.0
margin_right = 189.0
margin_bottom = 137.0
custom_fonts/font = ExtResource( 1 )
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toast" type="Label" parent="."]
anchor_right = 1.0
margin_left = 716.832
margin_top = 364.137
margin_right = -7.16821
margin_bottom = 401.137
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingPopup" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.65366
margin_top = -3.98053
margin_right = 2.65369
margin_bottom = -3.98053
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="WaitingPopup"]
self_modulate = Color( 1, 1, 1, 0.705882 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLabel" type="Label" parent="WaitingPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.834
margin_top = -162.371
margin_right = 167.166
margin_bottom = -81.3706
custom_fonts/font = ExtResource( 1 )
text = "It is currently player's turn"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="WaitingPopup"]
position = Vector2( 526.815, 368.439 )
scale = Vector2( 0.712888, 0.712888 )
frames = SubResource( 3 )
frame = 47
speed_scale = 5.5
playing = true
[connection signal="item_activated" from="Ships/ShipContainer/ShipsGrid/ShipList" to="." method="shipUsed"]
[connection signal="pressed" from="Buttons/BuyShips" to="." method="buyShips"]
[connection signal="pressed" from="Buttons/GoToBridge" to="." method="_on_GoToBridge_pressed"]
[connection signal="pressed" from="Buttons/EndTurn" to="." method="endTurn"]
